# Trycorder5

./: .gitignore  Changelog-3.9.2.txt  Changelog-4.4.5.txt  Changelog-5.0.3.txt  Changelog-5.0.9.txt  Changelog-5.1.0.txt  Changelog-5.1.3.txt  LICENSE  README.md  Trycorder-Manual.odt  gitall.sh  gitchange.sh  initgit5.sh  trycorder.jks  tryserver.tgz
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: clockwise.xml  fadeinout.xml  slidein.xml
app/src/main/res/drawable/: trekbutton_blue.xml  trekbutton_blue_center.xml  trekbutton_blue_left.xml  trekbutton_blue_right.xml  trekbutton_gray.xml  trekbutton_gray_center.xml  trekbutton_gray_left.xml  trekbutton_gray_right.xml  trekbutton_green.xml  trekbutton_green_center.xml  trekbutton_green_left.xml  trekbutton_green_right.xml  trekbutton_indigo.xml  trekbutton_indigo_center.xml  trekbutton_indigo_left.xml  trekbutton_indigo_right.xml  trekbutton_mauve.xml  trekbutton_mauve_center.xml  trekbutton_red.xml  (+21 more)
gradle/wrapper/: gradle-wrapper.properties
gtkmltest/: CMakeLists.txt  gtkmltest  gtkmltest.kdev4  helloworld.cpp  helloworld.h  main.cpp  make.sh
gtkmltest/.kdev4/: gtkmltest.kdev4
ktryclient/: CMakeLists.txt  ktryclient.kdev4  ktryclientui.rc  main.cpp  mainwindow.cpp  mainwindow.h
ktryclient/.kdev4/: ktryclient.kdev4
tryclient/: CMakeLists.txt  make.sh  tryclient  tryclient.c  tryclient.kdev4
tryclient/.kdev4/: tryclient.kdev4
tryserver/: .sqliterc  CMakeLists.txt  make.sh  text.txt  trycorder.list  trydump.sh  trylist.sh  trylog.sh  trymodel.sh  trysel.sh  tryserver  tryserver.c  tryserver.kdev4  tryserver.schema  tryserver.sh
tryserver/.kdev4/: tryserver.kdev4
trysql/: .sqliterc  CMakeLists.txt  ip2city.sh  loadcity.sh  loadlist.sh  make.sh  trycity.txt  trycorders.txt  trycount.sh  trycount.txt  trycountry.txt  tryserver.schema  trysql  trysql.c  trysql.kdev4  trysql.sh
trysql/.kdev4/: trysql.kdev4
trysql/old/: loaddbip.sh
(+88 files in other folders)
